tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90:8:132:

    8 |   testCases = reshape((/20,45,(0 - 45),45,(0 - 85),90,(0 - 95),90,(0 - 45),125,(0 - 45),145,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036)/),(/8,2/))
      |                                                                                                                                    1
Error: Line truncated at (1) [-Werror=line-truncation]
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90:8:132:

    8 |   testCases = reshape((/20,45,(0 - 45),45,(0 - 85),90,(0 - 95),90,(0 - 45),125,(0 - 45),145,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036)/),(/8,2/))
      |                                                                                                                                    1
Error: Syntax error in expression at (1)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90:11:26:

   11 |     print *, angleDiff(tc(((0)+1)),tc(((1)+1)))
      |                          1
Error: Syntax error in argument list at (1)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90:18:9:

   18 |     if (((d < 0) - 180)) then
      |         1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90:10:18:

   10 |     tc = testCases(i0)
      |                  1
Error: Rank mismatch in array reference at (1) (1/2)
/workspace/mochi/tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90:10:19:

    9 |   do i0 = 1, size(testCases)
      |                            2
   10 |     tc = testCases(i0)
      |                   1
Warning: Array reference at (1) out of bounds (16 > 8) in loop beginning at (2)
f951: some warnings being treated as errors
