tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program angle_difference_between_two_bearings_1
  implicit none
  integer, dimension(8,2) :: testCases
  integer :: tc
  integer :: i0
    integer :: d
  testCases = reshape((/20,45,(0 - 45),45,(0 - 85),90,(0 - 95),90,(0 - 45),125,(0 - 45),145,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036)/),(/8,2/))
  do i0 = 1, size(testCases)
    tc = testCases(i0)
    print *, angleDiff(tc(((0)+1)),tc(((1)+1)))
  end do
  contains
  recursive real function angleDiff(b1,b2) result(res)
    real, intent(in) :: b1
    real, intent(in) :: b2
    d = (b2 - b1)
    if (((d < 0) - 180)) then
      res = (d + 360)
      return
    end if
    if ((d > 180)) then
      res = (d - 360)
      return
    end if
    res = d
    return
  end function angleDiff
end program angle_difference_between_two_bearings_1
